# kaggle

./: .gitignore  README.md  poetry.toml  pyproject.toml
docker/kaggle_trainer/: Dockerfile  build.sh  publish.sh  train.py
docker/ml_soln_trainer/: Dockerfile  build.sh  entrypoint.py  publish.sh
housing_prices/: config.py  dataclass_utils.py  feature_config.yml  model.py  model_selection.py  path_anchor.py  predict.py  submit.py
notebooks/housing_prices/: train.ipynb
scripts/: init_argcomplete.sh  utils.sh
