[tool.poetry]
name = "kaggle"
version = "1.0.0"
description = "Solutions to Kaggle competitions"
authors = ["Michael Knopf"]
packages = [
  {include = "housing_prices"},
]

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
kaggle = "^1.6.17"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
pyyaml = "^6.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
