[tool.poetry]
name = "kaggle-solutions"
version = "1.0.0"
description = "Solutions to Kaggle competitions"
authors = ["Michael Knopf"]
packages = [
  {include = "**/*", from="packages"},
]

[tool.poetry.scripts]
kag = "common.kaggle_cli:main"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
kaggle = "^1.6.17"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
pyyaml = "^6.0.1"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
tensorflow = ">=2.16.0,<2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
